--- a/scenarios/Door07/Door07_de.html
+++ b/scenarios/Door07/Door07_de.html
@@ -1,5 +1,5 @@
 <p>Gestern gab es eine lange und gut durchdachte Mission. Heute wird es deutlich experimenteller... Oh Nein! Dein Market ist weg...<br />Das wird sicher zum Problem!</p>
-<p>Wegen des andauernden Krieges musste <strong>der markt leider geschlossen werden</strong>. Ich habe f&uuml;r dich bereits die Umgebung erkundet und es wird schnell klar: Du bist umzingelt! Die Europ&auml;er sind im Konflikt mit der Arabern gefangen. <span style="color: #0000ff;"><strong>Friedrich </strong></span>und <strong><span style="color: #800080;">Sheriff</span> </strong>in der linken oberen Ecke scheinen stark in Infrastruktur zu investieren. Sobald sie einmal aufgebaut sind werden sie zu Monstern!<br />Ihr Verb&uuml;ndeter <strong><span style="color: #ff9900;">Richard</span> </strong>hat sich rechts unten in der Ecke verkrochen. <strong><span style="color: #339966;">Emir </span></strong>und <strong><span style="color: #ffff00;">Kaliph</span> </strong>in der oberen rechten Ecke k&auml;mpfen darum ihre Burgen zu vervollst&auml;ndigen. Ihr Verb&uuml;ndeter <strong>Nizar</strong> verzweifelt unten links irgendwie seine Wirtschaft zum Laufen zu bringen.<br />Denk positiv! Du hast eine Menge an Startressourcen zur Verf&uuml;gung und befindest dich immerhin auf dem Plateau im strategischen Vorteil.</p>
+<p>Wegen des andauernden Krieges musste <strong>der Markt leider geschlossen werden!</strong> Ich habe f&uuml;r dich bereits die Umgebung erkundet und es wird schnell klar: Du bist umzingelt! Die Europ&auml;er sind im Konflikt mit der Arabern gefangen. <span style="color: #0000ff;"><strong>Friedrich </strong></span>und <strong><span style="color: #800080;">Sheriff</span> </strong>in der linken oberen Ecke scheinen stark in Infrastruktur zu investieren. Sobald sie einmal aufgebaut sind werden sie zu Monstern!<br />Ihr Verb&uuml;ndeter <strong><span style="color: #ff9900;">Richard</span> </strong>hat sich rechts unten in der Ecke verkrochen. <strong><span style="color: #339966;">Emir </span></strong>und <strong><span style="color: #ffff00;">Kalif</span> </strong>in der oberen rechten Ecke k&auml;mpfen darum ihre Burgen zu vervollst&auml;ndigen. Ihr Verb&uuml;ndeter <strong>Nizar</strong> verzweifelt unten links irgendwie seine Wirtschaft zum Laufen zu bringen.<br />Denk positiv! Du hast eine Menge an Startressourcen zur Verf&uuml;gung und befindest dich immerhin auf dem Plateau im strategischen Vorteil.</p>
 <p>Viel Gl&uuml;ck und viel Spa&szlig; :D</p>
 <p>Ah warte, du erwartest ein paar Hinweise, nicht wahr?<br />Hmmmmm, Da sind sie. Es steht dir nat&uuml;rlich frei diese zu ignorieren, wenn du dich bereits mit Spielen ohne Markt auskennst.</p>
 <details>
@@ -8,13 +8,13 @@ Richard und Nizar haben sich voll auf dich fokussiert, sie werden immer den ihne
 <summary>Hinweis 2</summary>
 Friedrich und Emir werden immer den mit dem meisten Gold angreifen. Gold auszugeben ist einfach, Gold zu erwirtschaften ohne Markt hingegen nur durch Steuern m&ouml;glich.</details><details>
 <summary>Hinweis 3</summary>
-Sheriff und Kaliph greifen immer den Schw&auml;chsten an. Pass auf, dass es nicht du bist, an dessen Leid sie sich laben.</details><details>
+Sheriff und Kalif greifen immer den Schw&auml;chsten an. Pass auf, dass es nicht du bist, an dessen Leid sie sich laben.</details><details>
 <summary>Hinweis 4</summary>
 Mangen vom Kopf des Berges aus geben dir einen gro&szlig;en Vorteil wenn es um lange dreckige K&auml;mpfe geht.</details><details>
 <summary>Hinweis 5</summary>
 Nizars Burg ist durchzogen von Pech. Seine Burg brennt sogar noch besser als der Weihnachtsbaum bei Oma im Wohnzimmer.</details><details>
 <summary>Hinweis 6</summary>
-Du k&ouml;nntest zwar sowohl Richard als auch Nizar schnell &uuml;ber den Jordan schicken, allerdings k&ouml;nnen sie auch als Opfer f&uuml;r Kaliph und Nizar herhalten!</details><details>
+Du k&ouml;nntest zwar sowohl Richard als auch Nizar schnell &uuml;ber den Jordan schicken, allerdings k&ouml;nnen sie auch als Opfer f&uuml;r Kalif und Nizar herhalten!</details><details>
 <summary>Hinweis 7</summary>
 Versuche dir einen gesunden Baumbestand am Leben zu erhalten, sonst wird dir irgendwann das Holz ausgehen!</details><details>
 <summary>Hinweis 8</summary>
